--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -93,10 +93,7 @@
                     <img src="../Assets/img/Physical/art-1.jpg"  class="grow">
                     <a class="frog" href="../Assets/img/physical - large/Portrait.pdf">Portrait</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This is a portrait of a girl...</p>
                         </div>
                 </div>
                 </div>
@@ -127,30 +124,22 @@
                     <img src="../Assets/img/Physical/art-4.jpg" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/chinatown.pdf">China Town</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This is a still life water color painting of China Town in Los Angeles. </p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-5">
                     <img src="../Assets/img/Physical/art-5.jpg" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/washing machine.pdf">Backgrounds</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">*FIXX</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-6">
                     <img src="../Assets/img/Physical/art-6.JPG" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/sketchbook.pdf">Sketchbook</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">Take a look into my sketchbook where all of my ideas originate. From rough 
+                            sketches to fully colorized works   </p>
                         </div>
                 </div>
 
