--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -100,80 +100,58 @@
                     <img src="../Assets/img/graphic/graphic-1.jpg" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/version 9 biophillia-01.pdf">Biophillia Poster Contest</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This is a poster designed for a biophillia inspired poster competition. 
+                            Submissions had to explore humans innate connection with nature and how 
+                            it contributes to our physical and mental well being.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-2">
                     <img src="../Assets/img/graphic/graphic-2.jpg" class="grow">
-                    <a class="frog" href="../Assets/img/Projects - large/food icons-01.pdf">Food Icons</a>
+                    <a class="frog" href="../Assets/img/Projects - large/swiss cheese-01.pdf">Swiss Cheese</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">*FIXX</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-3">
                     <img src="../Assets/img/graphic/graphic-3.png" class="grow">
-                    <a class="frog" href="../Assets/img/Projects - large/idk.pdf">Character Design</a>
+                    <a class="frog" href="../Assets/img/Projects - large/character work.pdf">Character Design</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This is a compliation of the character design work I have done.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-4">
                     <img src="../Assets/img/graphic/graphic-4.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Gemini.pdf">Gemini</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This piece is a deck of cards inspired by my zodiac sign.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-5">
                     <img src="../Assets/img/graphic/graphic-5.png"  class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/city poster-01.pdf">Prague Poster</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">Travel poster made for the city of Prague in the Czech Republic.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-6">
                     <img src="../Assets/img/graphic/graphic-6.png"  class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Ratatouille.pdf">Ratatouille</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">Movie posters inspired by the Disney film Ratatouille.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-7">
                     <img src="../Assets/img/graphic/graphic-7.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/POP picture.pdf">POP Style</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This artwork was done in a POP comic book style that was used by rewnowned artist Roy Lichtenstein.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-8">
                     <img src="../Assets/img/graphic/graphic-8.png" class="grow">
-                    <a class="frog" href="../Assets/img/Projects - large/swiss cheese-01.pdf">Swiss Cheese</a>
+                    <a class="frog" href="../Assets/img/Projects - large/food icons-01.pdf">Food Icons</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">These are various food icons I designed based on sushi, toast, and crackers</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-9">
@@ -185,37 +163,35 @@
                               and then evolved into an entire project focused on making a new suitcase that addresses the complaints most 
                               consumers, including myself, have. First I focused components of the suitcase itself, designing the wheels so
                                they have 360 degree motion and clip in airtight bags that maximize the space in the suitcase. After, I 
-                               decided to create the concept of an app that would additionally limit the stress of travelers.</p>
+                               decided to create the concept of an app that would make traveling easier.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-10">
                     <img src="../Assets/img/graphic/graphic-10.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/fairies.pdf">Fairies</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">In this photoshop piece I experimented with the concept of fairies. 
+                            I strove to make the scene feel very soft and mystical. </p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-11">
                     <img src="../Assets/img/graphic/graphic-11.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Glitch.pdf">Glitch</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">Glitch is a movie poster I made for a technology based thriller film (that does not exist) in photoshop. </p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-12">
                     <img src="../Assets/img/graphic/graphic-12.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Willow.pdf">Album Cover</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">For this piece I designed a new album cover for Willow Smiths album WILLOW in photoshop. 
+                        Willows album explores themes such as female empowerment and feminity. To play off of this I incorperated 
+                        the symbol of the triple moon which signifies the three stages of a womens life; the maiden, the mother, and the crone. 
+                        The triple moon connects to the divine feminine as well as the progression of life, death, and rebirth. 
+                        Lotus flowers were used in this work as they similarly are assocaited with the cycle of life. The stages of a pink lotus 
+                        flowers growth are also connected with the different stages of enlightnment in buddhism.
+                        </p>
                     </div>
                 </div>
 
