--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -93,7 +93,7 @@
                     <img src="../Assets/img/Physical/art-1.jpg"  class="grow">
                     <a class="frog" href="../Assets/img/physical - large/Portrait.pdf">Portrait</a>
                     <div>
-                        <p class="toad">This is a portrait of a girl...</p>
+                        <p class="toad">This is a portrait I painted based on an instagram model in order to practice my technical skills.</p>
                         </div>
                 </div>
                 </div>
@@ -103,9 +103,8 @@
                     <div>
                         <p class="toad">Music has always been a huge inspiration in my life and I have always loved looking at the album covers 
                             of artists because I think it tells a lot about an artist and their music. This painting is an album cover inspired 
-                            by me that has details in it that are very personal. By looking at the painting you get a feel for my style, interests,
-                             and personality. The name of the painting is pluto because, while I have the tendency to isolate myself, the people 
-                             around me continue to love and fight for me. Inside the album, the genre of music that would be found is R & B and 
+                            by me that includes personal details from my life. By looking at the painting you get a feel for my style, interests,
+                             and personality. Inside the album, the genre of music that would be found is R & B and 
                              alternative Pop.</p>
                         </div>
                 </div>
@@ -131,7 +130,7 @@
                     <img src="../Assets/img/Physical/art-5.jpg" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/washing machine.pdf">Backgrounds</a>
                     <div>
-                        <p class="toad">*FIXX</p>
+                        <p class="toad">This is a compilation of my background work.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-6">
