--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -71,13 +71,13 @@
 
             <div id="ducks">
                 <img src="../Assets/img/graphic/graphic-1.jpg" id="smol-img1" class="graphic">
-                <img src="../Assets/img/graphic/graphic-2.jpg" id="smol-img2" class="graphic">
+                <img src="../Assets/img/graphic/graphic-2.png" id="smol-img2" class="graphic">
                 <img src="../Assets/img/graphic/graphic-3.png" id="smol-img3" class="graphic">
                 <img src="../Assets/img/graphic/graphic-4.png" id="smol-img4" class="graphic">
                 <img src="../Assets/img/graphic/graphic-5.png" id="smol-img5" class="graphic">
                 <img src="../Assets/img/graphic/graphic-6.png" id="smol-img6" class="graphic">
                 <img src="../Assets/img/graphic/graphic-7.png" id="smol-img7" class="graphic">
-                <img src="../Assets/img/graphic/graphic-8.png" id="smol-img8" class="graphic">
+                <img src="../Assets/img/graphic/graphic-8.jpg" id="smol-img8" class="graphic">
                 <img src="../Assets/img/graphic/graphic-9.jpg" id="smol-img9" class="graphic">
                 <img src="../Assets/img/graphic/graphic-10.png" id="smol-img10" class="graphic">
                 <img src="../Assets/img/graphic/graphic-11.png" id="smol-img11" class="graphic">
@@ -100,30 +100,31 @@
                     <img src="../Assets/img/graphic/graphic-1.jpg" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/version 9 biophillia-01.pdf">Biophillia Poster Contest</a>
                     <div>
-                        <p class="toad">This is a poster designed for a biophillia inspired poster competition. 
-                            Submissions had to explore humans innate connection with nature and how 
+                        <p class="toad">
+                            This is a poster designed for a biophillia inspired poster competition. 
+                            Submissions had to explore human's innate connection with nature and how 
                             it contributes to our physical and mental well being.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-2">
-                    <img src="../Assets/img/graphic/graphic-2.jpg" class="grow">
+                    <img src="../Assets/img/graphic/graphic-2.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/food icons-01.pdf">Food Icons</a>
                     <div>
-                        <p class="toad">*FIXX</p>
+                        <p class="toad">Various food icons designed based on popular snacks.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-3">
                     <img src="../Assets/img/graphic/graphic-3.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/character work.pdf">Character Design</a>
                     <div>
-                        <p class="toad">This is a compliation of the character design work I have done.</p>
+                        <p class="toad">Compilation of the character design work I have done.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-4">
                     <img src="../Assets/img/graphic/graphic-4.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Gemini.pdf">Gemini</a>
                     <div>
-                        <p class="toad">This piece is a deck of cards inspired by my zodiac sign.</p>
+                        <p class="toad">Deck of cards inspired by the zodiac sign Gemini.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-5">
@@ -144,14 +145,20 @@
                     <img src="../Assets/img/graphic/graphic-7.png" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/POP picture.pdf">POP Style</a>
                     <div>
-                        <p class="toad">This artwork was done in a POP comic book style that was used by rewnowned artist Roy Lichtenstein.</p>
+                        <p class="toad">This artwork was inspired by the POP art comic book style that was used by 
+                            renowned artist Roy Lichtenstein. POP art is a style that incorporates widespread cultural
+                             concepts sometimes combined with the use of irony. </p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-8">
-                    <img src="../Assets/img/graphic/graphic-8.png" class="grow">
+                    <img src="../Assets/img/graphic/graphic-8.jpg" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/swiss cheese-01.pdf">Swiss Cheese</a>
                     <div>
-                        <p class="toad">These are various food icons I designed based on sushi, toast, and crackers</p>
+                        <p class="toad">This piece is called swiss cheese and it was meant to represent anxiety. 
+                            The premise of the illustration was to mimic the feeling of being incomplete and 
+                            vulnerable. The watering can fills the subject up but instead of growing the water 
+                            instead pours out from the missing pieces of the person. 
+                        </p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-9">
