--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <div id="rasberry">
                     <a class="peach" href="Pages/portfolio.html">Graphic Design</a>
                 </div>
-                <div id="orange">
+                <!--<div id="orange">
                     <a class="peach" href="Pages/portfolio-3D.html">3D Modeling</a>
-                </div>
+                </div>-->
                 <div id="watermelon">
                     <a class="peach" href="Pages/portfolio-physical.html">Art</a>
                 </div>
