--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -65,7 +65,7 @@
 
     <div id="section-onee">
         <div>
-            <img id="meee" src="../Assets/img/about me/meee.jpg">
+            <img id="meee" src="../Assets/img/about me/quirky.jpg">
         </div>
 
         <div id="chatting">
