--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="navbar">
 
             <div class="nav-one">
-                <a href="Assets/img/emma resume.pdf id="Resume" class=nav >Resume</a>
+                <a href="Assets/img/emma resume.pdf" id="resume" class=nav >Resume</a>
             </div>
 
             
